Moved to teach template

--- a/meta.yml
+++ b/meta.yml
@@ -1,2 +1,5 @@
 title: Example Resource
-category: make
+category: teach
+lessons:
+    1: Getting started with Raspberry Pi
+    2: Continuing with Raspberry Pi
