--- a/meta.yml
+++ b/meta.yml
@@ -1,5 +1,2 @@
-title: Example Resource
-category: teach
-lessons:
-    1: Getting started with Raspberry Pi
-    2: Continuing with Raspberry Pi
+title: Build a Sense-HAT datalogger
+category: learn
