--- a/en/meta.yml
+++ b/en/meta.yml
@@ -6,7 +6,7 @@ description: Using the Sense-HAT hardware and it's Python library you will creat
 original_url: https://raspberrypi.org/learning/sense-hat-data-logger
 theme: red
 duration: 2
-listed: false
+listed: true
 ingredient: false
 copyedit: true
 curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
