--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,8 +1,6 @@
----
 title: Sense HAT Data Logger
 hero_image: images/banner.png
-description: Using the Sense-HAT hardware and it's Python library you will create
-  a data-logging device
+description: Using the Sense-HAT hardware and it's Python library you will create a data-logging device
 original_url: https://raspberrypi.org/learning/sense-hat-data-logger
 theme: red
 duration: 2
