--- a/en/meta.yml
+++ b/en/meta.yml
@@ -7,11 +7,15 @@ duration: 2
 listed: true
 ingredient: false
 copyedit: true
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
-interests: ''
-technologies: rpi, physical computing, python
-site_areas: ''
-steps:
+curriculum: 2, design-0, programming-2, phys-comp-1, manufacture-0, community-0
+interests: science
+technologies: raspberry-pi, electronic-components, python, sense-hat
+site_areas: projects
+hardware: raspberry-pi, electronic-components, sense-hat
+software: python
+version: 4
+last_tested: 2017-01-01
+steps: 
 - title: Introduction
 - title: What you will need
 - title: Getting data from the Sense HAT
