--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,3 +1,4 @@
+---
 title: Sense HAT data logger
 hero_image: images/banner.png
 description: Create a data-logging device using the Sense HAT hardware and Python
@@ -20,6 +21,10 @@ steps:
 - title: Getting data from the Sense HAT
 - title: Writing the data to a file
 - title: Adding a header to the CSV file
+  completion:
+  - engaged
 - title: Recording at specific time intervals
 - title: Starting your data logger on boot
-- title: "Challenge: selecting the data to be recorded"
+- title: 'Challenge: selecting the data to be recorded'
+  completion:
+  - internal
