--- a/en/meta.yml
+++ b/en/meta.yml
@@ -19,11 +19,13 @@ last_tested: 2017-01-01
 steps:
 - title: Introduction
 - title: What you will need
-  completion: engaged
 - title: Getting data from the Sense HAT
 - title: Writing the data to a file
+  completion:
+  - engaged
 - title: Adding a header to the CSV file
 - title: Recording at specific time intervals
 - title: Starting your data logger on boot
-  completion: internal
+  completion:
+  - internal
 - title: 'Challenge: selecting the data to be recorded'
